--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,10 @@
 /.web-server-pid
 
 .env
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
