--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,10 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            custom_authenticator: App\Security\UserAuthenticator
+            entry_point: App\Security\UserAuthenticator
+            guard:
+                authenticators:
+                    - App\Security\Middleware
             logout:
                 path: app_logout
                 # where to redirect after logout
@@ -35,7 +38,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+         - { path: ^/account, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
